[package]
name = "docker-game-servers"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "dgs"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bollard = "0.11.0"
chrono = "0.4.19"
clap = { version = "=3.0.0-beta.2", features = ["wrap_help"] }
clap_derive = "=3.0.0-beta.2"
clap_generate = "=3.0.0-beta.2"
comfy-table = "4.1.1"
derive_builder = "0.10.2"
dirs = "3.0.2"
futures-util = "0.3.16"
portpicker = "0.1.1"
termion = "1.5.6"
tokio = { version = "1.10.0", features = ["full"] }
