[package]
name = "docker-game-servers"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "dgs"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bollard = "0.11.0"
chrono = "0.4.19"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
clap_generate = {git = "https://github.com/clap-rs/clap"}
comfy-table = "4.1.1"
derive_builder = "0.10.2"
dirs = "3.0.2"
futures-util = "0.3.16"
portpicker = "0.1.1"
termion = "1.5.6"
tokio = { version = "1.10.0", features = ["full"] }
